# yamYard-server

./: .gitignore  123  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  main.py  pyproject.toml
yamYard/: asgi.py  db.sqlite3  manage.py  settings.py
yamYard/api/: serializers.py  urls.py  views.py
yamYard/yamYard/: settings.py  urls.py  wsgi.py
yamYardServer/: .gitignore  manage.py
yamYardServer/yamYardServer/: asgi.py  settings.py  urls.py  wsgi.py
yumYard/: db.sqlite3  manage.py
yumYard/api/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
yumYard/yumYard/: asgi.py  settings.py  urls.py  wsgi.py
