[tool.poetry]
name = "yumyard"
version = "0.1.0"
description = "A Django project"
authors = ["Vadim <uadiasim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.1.0"
drf-spectacular = "^0.27.2"
dj-database-url = "^0.5.0"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
django-filter = "^23.1"
Pillow = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
