[tool.poetry]
name = "yumyard"
version = "0.1.0"
description = "A Django project"
authors = ["Vadim <uadiasim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.2.3"
drf-spectacular = "^0.27.2"
django-filter = "^23.5"
Pillow = "^9.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"